feat(): complete jwt auth in hard code userDetails